# dataset

./: .gitignore  .gitmodules  README.md  cli.py  process.py  pyproject.toml  requirements.txt  vulnerables.csv
dataset/: __init__.py  cli.py  compiler.py  configuration.py  containerized_compiler.py  dataset_worker.py  datasets_parser.py  executable.py  parsers_manager.py  source.py  vulnerable_executables_index.py
dataset/parsers/: __init__.py  base.py  c_test_suite.py  juliet.py  toy_test_suite.py
dataset/parsing/: leader.py
dataset/parsing/parsers/: __init__.py  base.py  c_test_suite.py  dummy_test_suite.py  juliet.py
docker/: Dockerfile
modules/: dataset_nist_parser.py  dataset_worker.py  nist_juliet_parser.py
modules/parsing/: leader.py
modules/parsing/parsers/: __init__.py  base.py  c_test_suite.py  juliet.py
raw_testsuites/dummy_test_suite/: source.c
raw_testsuites/dummy_test_suite/multiple_inputs_streams/: Makefile
raw_testsuites/dummy_test_suite/test/file_null_pointer_deref/: source.c
raw_testsuites/dummy_test_suite/test/stdin_buffer_overflow/: source.c
raw_testsuites/toy_test_suite/argument_null_pointer_deref/: source.c
raw_testsuites/toy_test_suite/safe_argv_checker/: source.c
