[tool.poetry]
name = "dataset"
description = "Module for approximating the attack surface of an executable"
authors = ["OpenCRS"]
version = "0.1.0"

[tool.poetry.dependencies]
pandas= "1.2.3"
pycparser = "^2.21"
python = "^3.9"
rich = "^12.5.1"
cwe = "^1.6"
click = "^8.1.3"
patchelf = "^0.15.0"
docker = "^6.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.4"
pyproject-flake8 = "^0.0.1-alpha.5"
flake8-annotations = "^2.9.1"

[tool.poetry.scripts]
dataset = "dataset.cli:main"

[tool.pylint.MASTER]
init-hook="import sys; sys.path.append('.')"

[tool.pylint.MESSAGES_CONTROL]
disable="missing-function-docstring, missing-class-docstring, missing-module-docstring"

[tool.flake8]
extend-ignore = "ANN101,"
max-line-length=88
per-file-ignores = """
    ./**/__init__.py: F401
"""

[tool.black]
line-length = 79
preview = true