[tool.poetry]
name = "dataset"
description = "Module for approximating the attack surface of an executable"
authors = ["OpenCRS"]
version = "0.1.0"

[tool.poetry.dependencies]
pandas= "1.2.3"
pycparser = "^2.21"
python = "^3.9"
rich = "^12.5.1"
cwe = "^1.6"
click = "^8.1.3"
patchelf = "^0.15.0"
docker = "^6.0.0"

[tool.poetry.scripts]
dataset = "dataset.cli:main"
