[tool.poetry]
name = "dataset"
description = "Module for approximating the attack surface of an executable"
authors = ["OpenCRS"]
version = "0.1.0"

[tool.poetry.dependencies]
commons = { path = "../commons", develop = false }
pandas = "2.2.1"
numpy = "1.26.4"
pycparser = "^2.21"
python = "^3.10"
rich = "^12.5.1"
cwe = "^1.6"
click = "^8.1.3"
patchelf = "^0.15.0"
docker = "^6.1.2"
requests = "2.31.0"
pyelftools = "^0.29"

[tool.poetry.scripts]
dataset = "dataset.cli:main"
